--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,13 @@ PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
 safetensors==0.4.1
+scipy==1.11.4
 sqlparse @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_cb77ukgrpu/croot/sqlparse_1690901947630/work
 sympy==1.12
 tokenizers==0.15.0
 torch==2.1.1
 torch-vision==0.1.6.dev0
+torchvision==0.16.1
 tqdm==4.66.1
 transformers==4.35.2
 typing_extensions==4.8.0
